--- a/stylesheets/modes.css
+++ b/stylesheets/modes.css
@@ -38,7 +38,7 @@ td{
     max-width: 250px;
     height: 30px;
     max-height: 30px;
-    text-align: right;
+    display: flex;
     overflow: auto;
     white-space: nowrap;
 }
